--- a/popup.html
+++ b/popup.html
@@ -49,21 +49,25 @@
     <p id="inforSectionHeader" style="margin-top: 0px;">Customize your cursor:</p>
     <div id="customizationWrapper" style="display: grid;">
       <div id="element1" class="customizationElement">
-        <img id="element1Image" class="customizationImage" src="/assets/cursor.png">
+        <img id="element1Image" class="customizationImage" src="/customization/cursors/0.png">
       </div>
       <div id="element2" class="customizationElement">
-        <img id="element2Image" class="customizationImage" src="/assets/cursor.png">
+        <img id="element2Image" class="customizationImage" src="/customization/cursors/1.png">
       </div>
       <div id="element3" class="customizationElement">
-        <img id="element3Image" class="customizationImage" src="/assets/cursor.png">
+        <img id="element3Image" class="customizationImage" src="/customization/cursors/2.png">
       </div>
       <div id="element4" class="customizationElement">
-        <img id="element4Image" class="customizationImage" src="/assets/cursor.png">
+        <img id="element4Image" class="customizationImage" src="/customization/cursors/3.png">
       </div>
-      <script src="/popup.js"></script>
-      <script src="/flip.js"></script>
-      <link href="/popup.css" rel="stylesheet">
-      <link href="/tick.css" rel="stylesheet">
+      <div id="element5" class="customizationElement">
+        <img id="element5Image" class="customizationImage" src="/customization/cursors/4.png">
+      </div>
+    </div>
+    <script src="/popup.js"></script>
+    <script src="/flip.js"></script>
+    <link href="/popup.css" rel="stylesheet">
+    <link href="/tick.css" rel="stylesheet">
 </body>
 
 </html>
